--- a/src/torchText.ipynb
+++ b/src/torchText.ipynb
@@ -2,6 +2,153 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "df = pd.read_csv(\"../data/news.csv\")\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "labels=df.label\n",
+    "x_train,x_test,y_train,y_test=train_test_split(df['text'], labels, test_size=0.2, random_state=7)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train = pd.concat([x_train, y_train], axis = 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test = pd.concat([x_test, y_test], axis = 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#out_train = train.to_json(orient='records')[1:-1].replace('},{', '} {')\n",
+    "#out_test = test.to_json(orient='records')[1:-1].replace('},{', '} {')\n",
+    "out_train = train.to_json()\n",
+    "out_test = test.to_json()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('../data/news_train.json', 'w') as f:\n",
+    "    f.write(out_train)\n",
+    "    f.close()\n",
+    "with open('../data/news_test.json', 'w') as f:\n",
+    "    f.write(out_test)\n",
+    "    f.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "from torchtext import data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "TEXT = data.Field(tokenize = 'spacy')\n",
+    "LABEL = data.LabelField(dtype = torch.float)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fields = {'text': ('n', TEXT), 'label': ('p', LABEL)}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_data, test_data = data.TabularDataset.splits(\n",
+    "                            path = '.',\n",
+    "                            train = '../data/news_train.json',\n",
+    "                            test = '../data/news_test.json',\n",
+    "                            format = 'json',\n",
+    "                            fields = fields\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<torchtext.data.dataset.TabularDataset at 0x7f854a177750>"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "IOPub data rate exceeded.\n",
+      "The notebook server will temporarily stop sending output\n",
+      "to the client in order to avoid crashing it.\n",
+      "To change this limit, set the config variable\n",
+      "`--NotebookApp.iopub_data_rate_limit`.\n",
+      "\n",
+      "Current values:\n",
+      "NotebookApp.iopub_data_rate_limit=1000000.0 (bytes/sec)\n",
+      "NotebookApp.rate_limit_window=3.0 (secs)\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(vars(train_data[0]))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
