--- a/CNN/torchText.ipynb
+++ b/CNN/torchText.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/anaconda3/lib/python3.8/site-packages/torchtext/data/field.py:150: UserWarning: Field class will be retired soon and moved to torchtext.legacy. Please see the most recent release notes for further information.\n",
+      "  warnings.warn('{} class will be retired soon and moved to torchtext.legacy. Please see the most recent release notes for further information.'.format(self.__class__.__name__), UserWarning)\n"
+     ]
+    }
+   ],
    "source": [
     "# New Stuff\n",
     "from torchtext.data import Field, TabularDataset, BucketIterator\n",
@@ -26,17 +35,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/opt/anaconda3/lib/python3.7/site-packages/torchtext/data/example.py:68: UserWarning: Example class will be retired soon and moved to torchtext.legacy. Please see the most recent release notes for further information.\n",
+      "/opt/anaconda3/lib/python3.8/site-packages/torchtext/data/example.py:68: UserWarning: Example class will be retired soon and moved to torchtext.legacy. Please see the most recent release notes for further information.\n",
       "  warnings.warn('Example class will be retired soon and moved to torchtext.legacy. Please see the most recent release notes for further information.', UserWarning)\n",
-      "/opt/anaconda3/lib/python3.7/site-packages/torchtext/data/example.py:52: UserWarning: Example class will be retired soon and moved to torchtext.legacy. Please see the most recent release notes for further information.\n",
+      "/opt/anaconda3/lib/python3.8/site-packages/torchtext/data/example.py:52: UserWarning: Example class will be retired soon and moved to torchtext.legacy. Please see the most recent release notes for further information.\n",
       "  warnings.warn('Example class will be retired soon and moved to torchtext.legacy. Please see the most recent release notes for further information.', UserWarning)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Num of training:  6335\n",
+      "Num of testing:  6335\n"
      ]
     }
    ],
@@ -53,9 +70,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Num of training:  4751\n",
+      "Num of validation:  1584\n",
+      "Num of testing:  6335\n"
+     ]
+    }
+   ],
    "source": [
     "train_data, validation_data = train_data.split(split_ratio=0.75)\n",
     "print(\"Num of training: \", len(train_data))\n",
@@ -65,13 +92,207 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_keys(['title', 'text', 'label'])\n",
+      "dict_values([['gop', 'hits', 'another', 'roadblock', 'on', 'obamacare', 'repeal'], ['donald', 'trump', 'is', 'considering', 'tapping', 'a', 'democrat', 'to', 'be', 'his', 'treasury', 'secretary', ',', 'politico', 'has', 'learned', '.'], 'REAL'])\n"
+     ]
+    }
+   ],
    "source": [
     "print(train_data[0].__dict__.keys())\n",
     "print(train_data[0].__dict__.values())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/anaconda3/lib/python3.8/site-packages/torchtext/data/field.py:150: UserWarning: LabelField class will be retired soon and moved to torchtext.legacy. Please see the most recent release notes for further information.\n",
+      "  warnings.warn('{} class will be retired soon and moved to torchtext.legacy. Please see the most recent release notes for further information.'.format(self.__class__.__name__), UserWarning)\n",
+      "\r",
+      "aclImdb_v1.tar.gz:   0%|          | 0.00/84.1M [00:00<?, ?B/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "downloading aclImdb_v1.tar.gz\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "aclImdb_v1.tar.gz: 100%|██████████| 84.1M/84.1M [00:09<00:00, 8.57MB/s]\n",
+      "/opt/anaconda3/lib/python3.8/site-packages/torchtext/data/example.py:78: UserWarning: Example class will be retired soon and moved to torchtext.legacy. Please see the most recent release notes for further information.\n",
+      "  warnings.warn('Example class will be retired soon and moved to torchtext.legacy. Please see the most recent release notes for further information.', UserWarning)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "from torchtext import data\n",
+    "from torchtext import datasets\n",
+    "import random\n",
+    "import numpy as np\n",
+    "\n",
+    "SEED = 1234\n",
+    "\n",
+    "random.seed(SEED)\n",
+    "np.random.seed(SEED)\n",
+    "torch.manual_seed(SEED)\n",
+    "torch.backends.cudnn.deterministic = True\n",
+    "\n",
+    "TEXT = data.Field(tokenize = 'spacy', batch_first = True)\n",
+    "LABEL = data.LabelField(dtype = torch.float)\n",
+    "\n",
+    "train_data, test_data = datasets.IMDB.splits(TEXT, LABEL)\n",
+    "\n",
+    "train_data, valid_data = train_data.split(random_state = random.seed(SEED))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      ".vector_cache/glove.6B.zip: 862MB [06:31, 2.20MB/s]                               \n",
+      "100%|█████████▉| 399999/400000 [00:15<00:00, 25520.19it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "MAX_VOCAB_SIZE = 25_000\n",
+    "\n",
+    "TEXT.build_vocab(train_data, \n",
+    "                 max_size = MAX_VOCAB_SIZE, \n",
+    "                 vectors = \"glove.6B.100d\", \n",
+    "                 unk_init = torch.Tensor.normal_)\n",
+    "\n",
+    "LABEL.build_vocab(train_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/anaconda3/lib/python3.8/site-packages/torchtext/data/iterator.py:48: UserWarning: BucketIterator class will be retired soon and moved to torchtext.legacy. Please see the most recent release notes for further information.\n",
+      "  warnings.warn('{} class will be retired soon and moved to torchtext.legacy. Please see the most recent release notes for further information.'.format(self.__class__.__name__), UserWarning)\n"
+     ]
+    }
+   ],
+   "source": [
+    "BATCH_SIZE = 64\n",
+    "\n",
+    "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
+    "\n",
+    "train_iterator, valid_iterator, test_iterator = data.BucketIterator.splits(\n",
+    "    (train_data, valid_data, test_data), \n",
+    "    batch_size = BATCH_SIZE, \n",
+    "    device = device)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch.nn as nn\n",
+    "import torch.nn.functional as F\n",
+    "\n",
+    "class CNN(nn.Module):\n",
+    "    def __init__(self, vocab_size, embedding_dim, n_filters, filter_sizes, output_dim, dropout, pad_idx):\n",
+    "        super().__init__()\n",
+    "        \n",
+    "        self.embedding = nn.Embedding(vocab_size, embedding_dim, padding_idx = pad_idx)\n",
+    "        \n",
+    "        self.conv_0 = nn.Conv2d(in_channels = 1, out_channels = n_filters,\n",
+    "                               kernel_size = (filter_sizes[0], embedding_dim))\n",
+    "        \n",
+    "        self.conv_1 = nn.Conv2d(in_channels = 1,\n",
+    "                               out_channels = n_filters,\n",
+    "                               kernel_size = (filter_sizes[1], embedding_dim))\n",
+    "        \n",
+    "        self.conv_2 = nn.Conv2d(in_channels = 1,\n",
+    "                               out_channels = n_filters,\n",
+    "                               kernel_size = (filter_sizes[2], embedding_dim))\n",
+    "        \n",
+    "        self.fc = nn.Linear(len(filter_sizes) * n_filters, output_dim)\n",
+    "        \n",
+    "        self.dropout = nn.Dropout(dropout)\n",
+    "        \n",
+    "    def forward(self, text):\n",
+    "        \n",
+    "        #text = [batch size, sent len]\n",
+    "        embedded = self.embedding(text)\n",
+    "        \n",
+    "        #embedded = [batch size, sent len, emb dim]\n",
+    "        embedded = embedded.unsqueeze(1)\n",
+    "        \n",
+    "        #embedded = [batch size, 1, sent len, emb dim]\n",
+    "        conved_0 = F.relu(self.conv_0(embedded).squeeze(3))\n",
+    "        conved_1 = F.relu(self.conv_1(embedded).squeeze(3))\n",
+    "        conved_2 = F.relu(self.conv_1(embedded).squeeze(3))\n",
+    "        \n",
+    "        #conved_n = [batch size, n_filets, sent len - filter_sizes[n] + 1]\n",
+    "        pooled_0 = F.max_pool1d(conved_0, conved_0.shape[2]).squeeze(2)\n",
+    "        pooled_1 = F.max_pool1d(conved_1, conved_1.shape[2]).squeese(2)\n",
+    "        pooled_2 = F.max_pool1d(conved_2, conved_2.shape[2]).squeeze(2)\n",
+    "        \n",
+    "        #pooled_n = [batch size, n_filters]\n",
+    "        cat= self.dropout(torch.cat((pooled_0, pooled_1, pooled_2), dim=1))\n",
+    "        \n",
+    "        #cat = [batch size, n_filters * len(filter_sizes)]\n",
+    "        \n",
+    "        return self.fc(cat)\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "INPUT_DIM = len(TEXT.vocab)\n",
+    "EMBEDDING_DIM = 100\n",
+    "N_FILTERS = 100\n",
+    "FILTER_SIZES = [3,4,5]\n",
+    "OUTPUT_DIM = 1\n",
+    "DROPOUT = 0.5\n",
+    "PAD_IDX = TEXT.vocab.stoi[TEXT.pad_token]\n",
+    "\n",
+    "model = CNN(INPUT_DIM, EMBEDDING_DIM, N_FILTERS, FILTER_SIZES, OUTPUT_DIM, DROPOUT, PAD_IDX)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -90,7 +311,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
